--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.11.2",
+    "react-tabs": "^6.0.1",
     "react-toastify": "^9.1.3",
     "sweetalert2": "^11.7.5"
   },
